# DCodeX

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitignore  MODULE.bazel  README.md  bazel-DCodeX  bazel-bin  bazel-out  bazel-testlogs  dcodex-setup.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.bazelrc  codeql.yml  linux_ci.yml  msan_suppressions.txt
examples/c/: 01_hello_world.c  02_basic_math.c  02_stdin_input.c  03_infinite_loop.c  03_pointers.c  04_memory_exhaustion.c  04_structs.c  05_file_io.c  05_output_flood.c  06_dynamic_memory.c
examples/cpp/: 01_hello_world.cpp  02_basic_math.cpp  03_fibonacci.cpp  04_prime_numbers.cpp  05_factorial.cpp  06_arrays_and_vectors.cpp  07_strings.cpp  08_memory_allocation.cpp  09_cpu_intensive.cpp  10_sandbox_safe.cpp  11_infinite_loop.cpp  12_memory_exhaustion.cpp  13_stdin_input.cpp  14_output_flood.cpp
examples/python/: 01_hello_world.py  02_basic_math.py  03_file_operations.py  04_data_structures.py  05_iterators_generators.py  06_infinite_loop.py  07_memory_exhaustion.py  08_slow_computation.py  09_output_flood.py
proto/: BUILD  sandbox.proto
python_client/: BUILD  __init__.py  cli.py  client.py  example_generator.py  execution_types.py  executor.py  file_manager.py  formatter.py  grpc_client.py  interactive_mode.py  language_detector.py  main.py  requirements.txt  result_printer.py
python_client/proto/: sandbox_pb2.py  sandbox_pb2_grpc.py
src/api/: BUILD  code_executor_service.cpp  code_executor_service.h  execute_reactor.cpp  execute_reactor.h  main.cpp  server_instance_manager.cpp  server_instance_manager.h
src/common/: BUILD  execution_cache.cpp  execution_cache.h  status_macros.h
src/engine/: BUILD  dynamic_worker_coordinator.cpp  dynamic_worker_coordinator.h  dynamic_worker_coordinator_test.cc  execution_pipeline.h  execution_pipeline_builder.cpp  execution_pipeline_builder.h  execution_step.h  execution_step_decorator.cpp  execution_step_decorator.h  (+21 more)
tests/: conftest.py  test_examples.py
(+12 files in other folders)
