module(
    name = "dcodex",
    version = "0.1.0",
)

bazel_dep(name = "grpc", version = "1.66.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "protobuf", version = "28.2", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_proto", version = "7.0.2")